--- a/paper/paper.bib
+++ b/paper/paper.bib
@@ -27,7 +27,7 @@
 	title={Derivatives markets}, 
 	ISBN={9780321543080}, 
 	publisher={Pearson}, 
-	author={Mcdonald, Robert L}, 
+	author={Mc{D}onald, Robert L}, 
 	year={2013} 
 }
 
@@ -49,7 +49,8 @@
   number={428},
   pages={1303--1313},
   year={1994},
-  publisher={Taylor \& Francis}
+  publisher={Taylor \& Francis},
+  doi={10.1080/01621459.1994.10476870}
 }
 
 @article{politis2004automatic,
